# dev_space_testing

./: .devfile.yaml  .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.py
