[project]
name = "dev-space-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "django-cors-headers==4.9.0",
    "django-filter==25.2",
    "django-lifecycle==1.3.0",
    "djangorestframework==3.17.1",
    "django-fsm-2==4.2.4",
    "drf-spectacular==0.29.0",
    "procrastinate[django]==3.9.0",
    "psycopg[binary,pool]==3.3.4",
    "python-dotenv==1.2.2",
    "whitenoise==6.12.0"
]
